fix(css): loading alignment of assignee selector

--- a/src/sentry/static/sentry/less/shared-components.less
+++ b/src/sentry/static/sentry/less/shared-components.less
@@ -1768,6 +1768,10 @@ ul.faces {
 .assignee-selector {
   height: 24px;
 
+  .loading {
+    display: inline-block;
+  }
+
   .btn-group {
     height: 24px;
 
